# cmake17

./: CMakeLists.txt
include/: concretestrategya.h  concretestrategyb.h  concretestrategyc.h  line.h  navigator.h  shape.h  strategy.h  textshape.h  textview.h  widget.h
src/: concretestrategya.cpp  concretestrategyb.cpp  concretestrategyc.cpp  line.cpp  main.cpp  main.cpp.autosave  navigator.cpp  textshape.cpp  textview.cpp  widget.cpp
